cargo-features = ["edition2024"]

[package]
name = "rustaceo_libre_reportview"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2024"

[dependencies]
ink = { version = "5.1.1", default-features = false }
rustaceo_libre = { git = "https://github.com/frentuka/RustaceoLibre", default-features = false, features = ["ink-as-dependency"] }
base64ct = "1.6.0"
const_env = "=0.1.2"
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.2", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }
parity-scale-codec = "3.6.12"
scale-info = "2.11.2"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "rustaceo_libre/std"
]
ink-as-dependency = []
e2e-tests = []

[patch.crates-io]
time = { git = "https://github.com/time-rs/time", tag = "v0.3.40" }
# cxx = { git = "https://github.com/dtolnay/cxx", tag = "1.0.177" }
# cxx-build = { git = "https://github.com/dtolnay/cxx", tag = "1.0.177" }